--- a/_posts/2021-02-25-visual-analytics-project-proposal/visual-analytics-project-proposal.Rmd
+++ b/_posts/2021-02-25-visual-analytics-project-proposal/visual-analytics-project-proposal.Rmd
@@ -5,7 +5,7 @@ description: |
 Listing: Visual Analytics Project
 author:
   - name: Atticus Foo, Gerald Chee & Nam Jihun
-    url: https://public.tableau.com/profile/atticusfoo#!/
+    url: https://public.tableau.com/profile/jihun.nam#!/
 date: 02-25-2021
 output:
   distill::distill_article:
